--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,12 @@ node_modules
 # local env files
 .env.local
 .env.*.local
-
+package-lock.json
 # Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
+yarn-lock
 # Editor directories and files
 .idea
 .vscode
